# siege-of-nodes

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  vcpkg.json
src/: main.cpp
src/core/: App.cpp  App.hpp  Window.cpp  Window.hpp
